<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.hktstudio.thibanglaixe.Activities.InformationActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarColoredBackArrow"
        android:popupTheme="@style/AppTheme"
        >
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv2"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv3"
            android:textColor="@android:color/black"
           />
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv4"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv5"
            android:textColor="@android:color/black"
            />
        <Button
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="Bắt đầu sử dụng"
            android:onClick="btn_infor"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_green"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
